--- a/index.html
+++ b/index.html
@@ -110,8 +110,13 @@
           <div class="footer">
             <div class="line cf">
                <div class="divisor dTop"></div>
-               <h4 class="float">© Pietro Schirano</h4><h4 class="float break">|</h4> 
-               <a class="fLink" href="">Contact me</a>
+               <h4 class="float firstF">© Pietro Schirano</h4><h4 class="float break">|</h4> 
+               <ul class="float cf">
+                <li><a class="fLink" href="">Contact me</a></li>
+                   <li><a class="fLink" href="">dribbble</a></li>
+                   <li><a class="fLink" href="">twitter</a></li>
+                   <li><a class="fLink" href="">blog</a></li>
+               </ul>
                <div class="divisor dBot"></div>
             </div>
           </div>
